Implement tracker to allow multi-select
recyclerview-selection implementation is based on
https://proandroiddev.com/a-guide-to-recyclerview-selection-3ed9f2381504

The drawback is that a long press is necessary to enable the multi selection process.

--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -8,5 +8,7 @@
         android:id="@+id/tvSelecteeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="26sp" />
+        android:textSize="26sp"
+        android:background="@drawable/item_background"
+        />
 </LinearLayout>
